_sass/layouts/_footer.scss
// Contains footer layout styles

.footer-section {
    clear: both;
    background: url(../images/textured-bg.jpg) repeat;
    padding: 10px 0 30px;
    position: relative;
    z-index: 10;

  .footer-shadow {
      height: 29px;
      margin: auto;
      display: block;
      background: url('../images/footer-shadow.png') no-repeat 0 0;
      padding-bottom: 1px
  }

  h2 {
      font-family: "Proxima Nova Regular",Arial,Helvetica,sans-serif;
      color: #767676;
      margin-bottom: 12px;
  }

  a {
    color: #767676;
  }

  .callout-ctn>li {
      display: -moz-inline-stack;
      display: inline-block;
      vertical-align: middle;
      *vertical-align: auto;
      zoom:1;*display: inline;
      margin-right: -1px;
  }

  .footer-links {
      float: left;
      margin-left: 32px;

    &:first-child {
      margin-left: 0;
    }
  }

  .privacy-policy {
    font-size: 13px;
    line-height: 15px;
    color: #adadad;
    padding-top: 40px;

    @media screen and (max-width: $screen-sm-min) {
      padding-top: 10px;
      font-size: 14px;
      line-height: 20px;
    }   

    a {
      color: #d94f40;
      margin-bottom: 5px;
      line-height: 15px;
    }

    .policy-heading {
      display: block;
      margin-bottom: 1px;
    }
  }

}

